# MangaReaderNewGeneration

./: .env.example  .gitignore  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  settings.py
alembic/: env.py
api/: comment.py  image.py  media.py  person.py  user_library_item.py
api/auth/: __init__.py  auth.py  depends.py  login.py  main.py  register.py
api/manga/: __init__.py  chapter.py  comic.py  genre.py  page.py  user_library.py
db/: database.py  types.py
models/: association.py  base.py  comic.py  comment.py  genre.py  image.py  person.py  user.py
schemas/: comic.py  comment.py  cover.py  genre.py  image.py  pagination.py  person.py  user.py  user_library_item.py
schemas/auth/: login.py  payload.py  register.py
services/: base_service.py  comic_service.py  comment_service.py  image_service.py  person_service.py  user_library_item_service.py  user_service.py  utils.py
services/comic/: chapter_service.py  comic_service.py  genre_service.py  page_service.py  user_library_item_service.py  user_library_service.py
tests/: confest.py
utils/: datetime_utils.py  jwt.py  media_client.py  security.py  validators.py
